fix: add condition to prevent js integer overflow

--- a/style.css
+++ b/style.css
@@ -38,6 +38,11 @@ main {
     border-radius: 10px 10px 0px 0px;
     padding: 0.5em;
 
+    overflow-x: auto;
+    overflow-y: hidden;
+    scrollbar-width: thin;
+    scrollbar-color: #0466c8 #a6e1fa;
+
     font-family: "Major Mono Display", monospace;
     font-weight: bold;
     font-size: 1.5em;
@@ -48,7 +53,7 @@ main {
     background-color: #ffffff;
     border-radius: 0px 0px 10px 10px;
     padding: 1em;
-    
+
     overflow-x: auto;
     overflow-y: hidden;
     scrollbar-width: thin;
